Update author details, references, minor corrections

--- a/data/references_data.bib
+++ b/data/references_data.bib
@@ -27,9 +27,9 @@
 @Thesis{Angevin_2011,
   author = {Tara Angevin},
   year = {2011},
-  title = {{Species richness and functional trait diversity response to land use in a temperate eucalypt woodland community. Unpublished Honours thesis, Department of Botany, La Trobe University.}},
+  title = {{Species richness and functional trait diversity response to land use in a temperate eucalypt woodland community}},
+  type = {Honours},
   institution = {La Trobe University},
-  type = {Honors Thesis},
 }
 
 @Article{Ashton_1975,
@@ -68,7 +68,7 @@
 @Unpublished{Baker_2019,
   year = {2019},
   author = {Andrew Baker},
-  title = {{Unpublished data: Post-fire fire-response surveys on the NSW north coast}},
+  title = {{Unpublished data: Post-fire fire-response surveys on the NSW north coast, Southern Cross University}},
 }
 
 @Misc{Barlow_1981,
@@ -406,9 +406,9 @@
 }
 
 @Article{Chen_2017,
-  author = {{Chen} and {S.-C.} and {Cornwell} and {W.} and Zhang H.-X. & Moles and A. T.},
+  author = {{Chen} and {S.-C.} and {Cornwell} and {W.} and Zhang H.-X. and {Moles} and A. T.},
   year = {2017},
-  title = {{Plants show more flesh in the tropics: variation in fruit type along latitudinal and climatic gradients.}},
+  title = {{Plants show more flesh in the tropics: Variation in fruit type along latitudinal and climatic gradients.}},
   journal = {Ecography},
   volume = {40},
   pages = {531--538},
@@ -551,9 +551,9 @@
 @Thesis{Cross_2009,
   author = {Erika Cross},
   year = {2009},
-  title = {{The characteristics of natives and invaders: A trait-based investigation into the theory of limiting similarity. Unpublished Hons thesis, Department of Botany, La Trobe University.}},
+  title = {{The characteristics of natives and invaders: A trait-based investigation into the theory of limiting similarity}},
+  type = {Honours},
   institution = {La Trobe University},
-  type = {Honors Thesis},
 }
 
 @Article{Crous_2013,
@@ -651,7 +651,7 @@
 @Unpublished{Duncan_1998,
   author = {David H. Duncan},
   year = {1998},
-  title = {{Unpublished manuscript: Structural basis of variation in leaf mass per area in  three plant clades}},
+  title = {{Unpublished data: Structural basis of variation in leaf mass per area in three plant clades, Macquarie University}},
 }
 
 @Article{Duncan_2011,
@@ -931,7 +931,7 @@
 @Unpublished{Gallagher_2015,
   year = {2015},
   author = {Rachael Gallagher and Robert Lanfear},
-  title = {{Unpublished data: Trait campaign with the Royal Botanical Gardens}},
+  title = {{Unpublished data: Trait campaign with the Royal Botanical Gardens & Macquarie University}},
 }
 
 @Unpublished{Gallagher_2018,
@@ -1045,7 +1045,7 @@
   title = {{Fruit characteristics of invasive bitou bush, Chrysanthemoides monilifera (Asteraceae), and a comparison with co-occurring native plant species}},
   volume = {52},
   number = {2},
-  pages = {223},
+  pages = {223-230},
   doi = {10.1071/bt03046},
 }
 
@@ -1077,9 +1077,9 @@
   author = {Carl R. Gosper and Colin J. Yates and Suzanne M. Prober},
   journal = {Journal of Applied Ecology},
   title = {{Floristic diversity in fire-sensitive eucalypt woodlands shows a `U'-shaped relationship with time since fire}},
-  pages = {n/a--n/a},
+  number = {50},
+  pages = {1187-1196},
   doi = {10.1111/1365-2664.12120},
-  editor = {Santiago Saura},
 }
 
 @Article{Gosper_2018,
@@ -1103,7 +1103,7 @@
 @Article{Gray_2019,
   year = {2019},
   author = {E F Gray and I J Wright and D S Falster and A S D Eller and C E R Lehmann and M G Bradford and L A Cernusak},
-  journal = {{AoB} {PLANTS}},
+  journal = {{AoB PLANTS}},
   title = {{Leaf:wood allometry and functional traits together explain substantial growth rate variation in rainforest trees}},
   volume = {11},
   number = {3},
@@ -1134,7 +1134,7 @@
   year = {2010},
   author = {Philip K. Groom and Byron B. Lamont},
   journal = {Plant and Soil},
-  title = {{Phosphorus accumulation in Proteaceae seeds: a synthesis}},
+  title = {{Phosphorus accumulation in Proteaceae seeds: A synthesis}},
   volume = {334},
   number = {1-2},
   pages = {61--72},
@@ -1352,13 +1352,13 @@
 @Unpublished{Hughes_1992,
   author = {Lesley Hughes and Barbara Rice},
   year = {1992},
-  title = {{Unpublished data: Traits data for 643 species}},
+  title = {{Unpublished data: Traits data for 643 species, Macquarie University}},
 }
 
 @Unpublished{Hughes_2005,
   author = {Kate Hughes},
   year = {2005},
-  title = {{Unpublished data: Wood and stem density data for Australian plant species}},
+  title = {{Unpublished data: Wood and stem density data for Australian plant species, Macquarie University}},
 }
 
 @Book{Hyland_2003,
@@ -1405,13 +1405,13 @@
 @Unpublished{Jagdish_2020,
   year = {2020},
   author = {Ashika Jagdish},
-  title = {{Unpublished data: Germination photoperiod sensitivity of Australian Plants}},
+  title = {{Unpublished data: Germination photoperiod sensitivity of Australian Plants, University of New South Wales}},
 }
 
 @Unpublished{Jin_2019,
   year = {2019},
   author = {Daniel Jin and Dieter Hochuli},
-  title = {{Unpublished data: Urbanisation increases arthropod abundance and herbivory on a native weed}},
+  title = {{Unpublished data: Urbanisation increases arthropod abundance and herbivory on a native weed, University of Sydney}},
 }
 
 @Article{Jordan_2001,
@@ -1428,7 +1428,7 @@
 @Unpublished{Jordan_2007,
   author = {Greg Jordan},
   year = {2007},
-  title = {{Unpublished data: Leaf traits for Tasmanian species}},
+  title = {{Unpublished data: Leaf traits for Tasmanian species, University of Tasmania}},
 }
 
 @Article{Jordan_2008,
@@ -1531,7 +1531,7 @@
 @Unpublished{Kirkpatrick_2020,
   year = {2020},
   author = {James Kirkpatrick},
-  title = {{Unpublished data: Fire response traits for woody Tasmanian endemic species}},
+  title = {{Unpublished data: Fire response traits for woody Tasmanian endemic species, University of Tasmania}},
 }
 
 @Article{Knox_2011,
@@ -1692,11 +1692,12 @@
   keywords = {determinants of plant community diversity and structure, community assembly, climate change, ecohydrology, ecological strategy, environmental unpredictability, functional traits, disturbance, riparian, wood density, south-east Australia},
 }
 
-@PhdThesis{Laxton_2005,
+@Thesis{Laxton_2005,
+  type = {PhD},
   author = {Emma Laxton},
   year = {2005},
   title = {{Relationship between leaf traits, insect communities and resource availability}},
-  school = {Macquarie University},
+  institution = {Macquarie University},
   url = {http://hdl.handle.net/1959.14/483},
 }
 
@@ -1732,16 +1733,6 @@
   doi = {10.1111/j.1365-2745.2006.01164.x},
 }
 
-@Article{Leishman_1990,
-  author = {{Westoby} and {M.} and {Rice} and {B.} and {Howell} and {J.}},
-  year = {1990},
-  title = {{Seed size and plant growth form as factors in dispersal spectra}},
-  journal = {Ecology},
-  volume = {71},
-  pages = {1307--1315},
-  doi = {10.2307/1938268},
-}
-
 @Article{Leishman_1992,
   author = {Michelle R. Leishman and Mark Westoby},
   year = {1992},
@@ -1750,16 +1741,6 @@
   volume = {80},
   pages = {417},
   doi = {10.2307/2260687},
-}
-
-@Article{Leishman_1993,
-  author = {{Westoby} and {M.} and {Rice} and {B.} and {Howell} and {J.}},
-  year = {1990},
-  title = {{Seed size and plant growth form as factors in dispersal spectra}},
-  journal = {Ecology},
-  volume = {71},
-  pages = {1307--1315},
-  doi = {10.2307/1938268},
 }
 
 @Article{Leishman_1995,
@@ -1851,7 +1832,7 @@
 @Unpublished{Lunt_2012,
   author = {Ian Lunt and John Morgan},
   year = {2012},
-  title = {{Unpublished data: Trait data from various Morgan and Lunt projects 1990-2012}},
+  title = {{Unpublished data: Trait data from various Morgan and Lunt projects 1990-2012, Charles Sturt & La Trobe University}},
 }
 
 @Article{Lusk_2010,
@@ -1911,7 +1892,7 @@
 @Unpublished{Manea_2011,
   author = {Anthony Manea},
   year = {2011},
-  title = {{Unpublished data: Dispersal appendage data for Acacia via Worldwide Wattle}},
+  title = {{Unpublished data: Dispersal appendage data for Acacia via Worldwide Wattle, Macquarie University}},
 }
 
 @Article{Marsh_1995,
@@ -2048,13 +2029,13 @@
 @Unpublished{Metcalfe_2020_1,
   year = {2020},
   author = {Daniel Metcalfe},
-  title = {{Unpublished data: Database of Cyperaceae traits}},
+  title = {{Unpublished data: Database of Cyperaceae traits, CSIRO}},
 }
 
 @Unpublished{Metcalfe_2020_2,
   year = {2020},
   author = {Daniel Metcalfe},
-  title = {{Unpublished data: Traits of Poaceae spp}},
+  title = {{Unpublished data: Traits of Poaceae spp, CSIRO}},
 }
 
 @Article{Milberg_1997,
@@ -2172,37 +2153,38 @@
   doi = {10.1111/nph.15480},
 }
 
-@PhdThesis{Morgan_2005,
+@Thesis{Morgan_2005,
+  type = {PhD},
   author = {Huw Morgan},
   year = {2005},
   title = {{Root system architecture, water use and rainfall responses of perennial species}},
-  school = {Macquarie University},
+  institution = {Macquarie University},
 }
 
-@PhdThesis{Morgan_2007,
+@Thesis{Morgan_2007,
+  type = {PhD},
   author = {Trevor Meers},
   year = {2007},
-  title = {{Role of Plant Functional Traits in determining the response of vegetation to land use change on the Delatite Peninsula, Victoria.}},
-  department = {School of Forest and Ecosystem Science},
-  school = {University of Melbourne},
+  title = {{Role of plant functional traits in determining the response of vegetation to land use change on the Delatite Peninsula, Victoria.}},
+  institution = {University of Melbourne},
 }
 
 @Unpublished{Morgan_2011_1,
   author = {John Morgan},
   year = {2011},
-  title = {{Unpublished data: Grassy woodland traits}},
+  title = {{Unpublished data: Grassy woodland traits, La Trobe University}},
 }
 
 @Unpublished{Morgan_2011_2,
   author = {John Morgan},
   year = {2011},
-  title = {{Unpublished data: Trait database}},
+  title = {{Unpublished data: Trait database, La Trobe University}},
 }
 
 @Unpublished{Morgan_2014,
   author = {John Morgan},
   year = {2004},
-  title = {{Unpublished data: Trait data from Victorian alpine plant species}},
+  title = {{Unpublished data: Trait data from Victorian alpine plant species, La Trobe University}},
 }
 
 @Article{Muir_2014,
@@ -2296,7 +2278,7 @@
 @Unpublished{Ooi_2018,
   year = {2018},
   author = {Mark K. J. Ooi},
-  title = {{Unpublished data: Herbivory survey within Royal National Park}},
+  title = {{Unpublished data: Herbivory survey within Royal National Park, University of New South Wales}},
 }
 
 @Misc{OReillyNugent_2018,
@@ -2316,6 +2298,16 @@
   doi = {10.1111/nph.12942},
 }
 
+@Book{Paczkowska_2000,
+  author = {Paczkowska G and Chapman A. R.},
+  year = {2000},
+  title = {{The Western Australian flora: A descriptive catalogue}},
+  publisher = {CALM, Kings Park and Botanic Gardens & Wildflower Society of Western Australia},
+  place = {Nedlands},
+  pages = {652},
+  isbn = {0646401009},
+}
+
 @Article{Palma_2017,
   year = {2017},
   author = {Estibaliz Palma and Jane A. Catford and Richard T. Corlett and Richard P. Duncan and Amy K. Hahs and Michael A. McCarthy and Mark J. McDonnell and Ken Thompson and Nicholas S. G. Williams and Peter A. Vesk},
@@ -2331,7 +2323,7 @@
   year = {1986},
   author = {J. S. Pate and E. Rasins and J. Rullo and J. Kuo},
   journal = {Annals of Botany},
-  title = {{Seed Nutrient Reserves of Proteaceae with Special Reference to Protein Bodies and their Inclusions}},
+  title = {{Seed nutrient reserves of Proteaceae with special reference to protein bodies and their inclusions}},
   volume = {57},
   number = {6},
   pages = {747--770},
@@ -2385,7 +2377,7 @@
 @Unpublished{Pickup_2002,
   year = {2002},
   author = {Melinda Pickup},
-  title = {{Unpublished data: wood density data from Kuring-gai National Park}},
+  title = {{Unpublished data: Wood density data from Kuring-gai National Park, Macquarie University}},
 }
 
 @Article{Pickup_2005,
@@ -2434,7 +2426,7 @@
 
 @Article{Prior_2004,
   year = {2004},
-  author = {L. D. PRIOR and D. M. J. S. BOWMAN and D. EAMUS},
+  author = {L. D. Prior and D. M. J. S. Bowman and D. Eamus},
   journal = {Functional Ecology},
   title = {{Seasonal differences in leaf attributes in Australian tropical tree species: family and habitat comparisons}},
   volume = {18},
@@ -2526,7 +2518,7 @@
 @Unpublished{Rice_1991,
   author = {B. Rice},
   year = {1991},
-  title = {{Unpublished data: Growth form of Kakadu plant species}},
+  title = {{Unpublished data: Growth form of Kakadu plant species, Macquarie University}},
 }
 
 @Article{Rice_2004,
@@ -2557,16 +2549,10 @@
   title = {{Transcription of Australian plant functional trait data from Ian's collection of papers}},
 }
 
-@Unpublished{Richards_2008_2,
-  year = {2008},
-  author = {Anna Richards},
-  title = {{Unpublished data from Anna Richards}},
-}
-
 @Unpublished{Roberts_2006,
   author = {Bryan Roberts},
   year = {2006},
-  title = {{Unpublished data: seed traits}},
+  title = {{Unpublished data: Seed traits, La Trobe University}},
 }
 
 @Article{Roderick_1999,
@@ -2687,7 +2673,7 @@
 @Unpublished{Schmidt_1993,
   year = {1993},
   author = {Susanne Schmidt},
-  title = {{Unpublished data: Compilation of mycorrhizal status data}},
+  title = {{Unpublished data: Compilation of mycorrhizal status data, University of Queensland}},
 }
 
 @Article{Schmidt_1997,
@@ -2721,12 +2707,6 @@
   number = {1-2},
   pages = {79--90},
   doi = {10.1007/s11104-009-0233-5},
-}
-
-@Unpublished{Schortemeyer_0000,
-  year = {0000},
-  author = {{Schortemeyer}},
-  title = {{unpublished data from Schortemeyer}},
 }
 
 @Article{Schulze_1994,
@@ -2795,11 +2775,12 @@
   doi = {10.1007/s00468-014-1023-0},
 }
 
-@PhdThesis{Scott_2010,
+@Thesis{Scott_2010,
+  type = {PhD},
   author = {Andrew John Scott},
   year = {2010},
   title = {{Vegetation recovery and recruitment processes in south-eastern Australian semi-arid old fields.}},
-  school = {La Trobe University},
+  institution = {La Trobe University},
 }
 
 @Article{Sendall_2016,
@@ -2907,7 +2888,7 @@
 @Unpublished{Standish_2019,
   year = {2019},
   author = {Rachel Standish},
-  title = {{Unpublished data: Jarrah forest}},
+  title = {{Unpublished data: Jarrah forest, Murdoch University}},
 }
 
 @Article{Staples_2019,
@@ -3079,7 +3060,7 @@
 }
 
 @Article{Trudgen_2005,
-  author = {M. E. Trudgeon and B. L. Rye},
+  author = {M. E. Trudgen and B. L. Rye},
   title = {{Astus, a new western Australian genus of Myrtaceae with heterocarpidic fruits}},
   year = {2005},
   journal = {Nuytsia},
@@ -3162,7 +3143,7 @@
 @Unpublished{Vesk_2007,
   author = {Peter Vesk},
   year = {2007},
-  title = {{Unpublished data: Leaf traits for flora of Falls Creek Victoria}},
+  title = {{Unpublished data: Leaf traits for flora of Falls Creek Victoria, University of Melbourne}},
 }
 
 @Article{Vesk_2019,
@@ -3189,7 +3170,7 @@
 @Misc{WAH_1998,
   author = {{Western Australian Herbarium}},
   year = {1998},
-  title = {{FloraBase: The western Australian flora}},
+  title = {{FloraBase: The Western Australian flora}},
   publisher = {Department of Parks and Wildlife},
   url = {https://florabase.dpaw.wa.gov.au/},
 }
@@ -3237,7 +3218,7 @@
 
 @Unpublished{Wells_2009,
   author = {Jessie Wells},
-  title = {{Unpublished data: Wood density data for global wood density database}},
+  title = {{Unpublished data: Wood density data for global wood density database, University of Queensland}},
   year = {2009},
 }
 
@@ -3276,8 +3257,7 @@
 @Unpublished{Westoby_2004,
   author = {Mark Westoby},
   year = {2004},
-  title = {{Unpublished data: Trait data for plant species at Mt Wellington and Sea Acres}},
-  note = {Collected by a research assistant Erica Williams while at Macquarie University},
+  title = {{Unpublished data: Trait data for plant species at Mt Wellington and Sea Acres, Macquarie University}},
 }
 
 @Book{Wheeler_2002,
@@ -3340,7 +3320,7 @@
 @Unpublished{Wright_2001,
   author = {Ian J. Wright},
   year = {2001},
-  title = {{Unpublished data: Seed mass reserve data for various species in NSW}},
+  title = {{Unpublished data: Seed mass reserve data for various species in NSW, Macquarie University}},
 }
 
 @Article{Wright_2002,
@@ -3379,13 +3359,13 @@
 @Unpublished{Wright_2008,
   author = {Ian Wright},
   year = {2008},
-  title = {{Unpublished data: Trait data for Northern Territory savanna species}},
+  title = {{Unpublished data: Trait data for Northern Territory savanna species, Macquarie University}},
 }
 
 @Unpublished{Wright_2009,
   author = {Ian J. Wright},
   year = {2009},
-  title = {{Unpublished data: Leaf pigment and reflectance data for sclerophylls}},
+  title = {{Unpublished data: Leaf pigment and reflectance data for sclerophylls, Macquarie University}},
 }
 
 @Article{Wright_2019,
@@ -3411,7 +3391,7 @@
 @Unpublished{Zanne_2007,
   author = {Amy Zanne},
   year = {2007},
-  title = {{Unpublished data: Hydraulic traits for NSW plant species from four field sites}},
+  title = {{Unpublished data: Hydraulic traits for NSW plant species from four field sites, Macquarie University}},
 }
 
 @Misc{Zanne_2009,
