--- a/data/references_ms.bib
+++ b/data/references_ms.bib
@@ -364,3 +364,13 @@
     note = {R package version 0.0.0.9001},
   }
 
+
+@book{Whittaker-1975,
+  title = {Communities and Ecosystems},
+  author = {Whittaker, R. H.},
+  year = {1975},
+  publisher = {{MacMillan Publishers}},
+  address = {{New York}}
+}
+
+
